--- a/uselessaddress/css/水平居中和垂直居中(待完善).md
+++ b/uselessaddress/css/水平居中和垂直居中(待完善).md
@@ -3,14 +3,23 @@
 设置  text-align:center     
 2. 定宽块状元素          
 设置左右margin 值为auto  
-3. 不定宽块状元素        
-    - a:在元素外加入  table  标签（完整的，包括  table、tbody、tr、td），该元素写在  td  内，然后设置  margin  的值为  auto           - b:给该元素设置displa:inine方法      
-    - c:父元素设置  position:relative  和  left:50%，子元素设置  position:relative  和  left:50%
-
 
 ## 垂直居中设置  
 1. 父元素高度确定的单行文本    
 设置  height = line-height     
-2. 父元素高度确定的多行文本       
-    - a:插入  table （插入方法和水平居中一样），然后设置  vertical-align:middle 
-    - b:先设置  display:table-cell  再设置  vertical-align:middle
+
+## 用 position: absolute 与 transform 来居中块级元素
+
+https://segmentfault.com/q/1010000005151903/a-1020000005151995
+
+translate要做偏移，是相对于自身的中心点而言，如果用百分比做单位，参考值就是本身元素的宽度
+
+## 使用flex布局
+1. 元素可以通过设置display:flex;将其指定为flex布局的容器，指定好了容器之后再为其添加align-items属性，该属性定义项目在交叉轴（这里是纵向轴）上的对齐方式
+display: flex;
+align-items: center;
+
+2. 给父元素设置display:flex，设置好之后改变主轴的方向flex-direction: column，
+display: flex;
+flex-direction: column;
+justify-content: center;
