--- a/uselessaddress/css/水平居中和垂直居中(待完善).md
+++ b/uselessaddress/css/水平居中和垂直居中(待完善).md
@@ -20,6 +20,9 @@ display: flex;
 align-items: center;
 
 2. 给父元素设置display:flex，设置好之后改变主轴的方向flex-direction: column，
+```
 display: flex;
-flex-direction: column;
+flex-direction: column; //默认row
 justify-content: center;
+```
+水平的主轴（main axis）和垂直的交叉轴（cross axis）
