--- a/uselessaddress/css/圣杯布局和双飞翼.md
+++ b/uselessaddress/css/圣杯布局和双飞翼.md
@@ -4,3 +4,42 @@
 不同之处在于解决中间栏div内容不被遮挡的思路不同
 - 对于圣杯布局,将中间栏的padding-right和left分别为左右栏的宽度,这个时候左右栏也被带过来了,最后对左右栏使用相对布局position:relative配合负right和left属性将其移动两边
 - 而双飞翼布局为了中间栏不被遮挡,直接在中间创建子div,然后设置此子div的margin-left和margin-right为左右两栏留出位置,思路更加简洁
+
+## flex实现
+
+```
+// HTML
+<div id="header">#header</div>
+<div id="container">
+    <div id="left" class="column">#left</div>
+    <div id="center" class="column">#center</div>
+    <div id="right" class="column">#right</div>
+</div>
+<div id="footer">#footer</div>
+
+// CSS
+body {
+        min-width: 550px;
+    }
+    #container{
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    .column{
+        height: 200px;
+        color:white;
+    }
+    #center{
+        flex-grow: 1;
+        background-color: black;
+    }
+    #left{
+        flex-basis: 200px;
+        background-color: red;
+    }
+    #right{
+        flex-basis: 200px;
+        background-color: blue;
+    }
+```
