添加一波面经

--- a/2018春招闯关记.md
+++ b/2018春招闯关记.md
@@ -22,7 +22,15 @@
 
 	答：没答出来。。。良神说用正则比较好，[cookie全家桶了解一波](http://www.jb51.net/article/86598.htm?pc)
 
-总结下：电话打的毫无防备，真是一脸懵逼，感觉这个电面也不算很正常的面试（只有8分钟）。。感觉更像试水的面试。面完之后通知明天在线打计算机综合大赛。。。
+总结下：电话打的毫无防备，真是一脸懵逼，感觉这个电面也不算很正常的面试（只有8分钟）。。感觉更像试水的面试。面完之后通知明天在线打计算机综合卷。。。
+
+### 笔试
+
+不是想象中的计算机综合卷，题目：
+用原生js实现，要求：不能搜索网上的资源，做到组件化，时间 100min。
+1、页面内有一个正方形元素，实现对其拖拽和放下（考虑浏览器兼容性）
+2、页面内有一个input输入框，实现在数组arr查询命中词并和autocomplete效果
+凉凉，腾讯再见了。
 
 ---
 
